# mutual_metrics

./: .env.example  README.md  docker-compose.yaml
backend/: dockerfile  dto.py  main.py  pyproject.toml  repositories.py
backend/middleware/: validate_user.py
backend/routers/: __init__.py  funds.py  positions.py  users.py
frontend/: .gitignore  dockerfile  dockerfile.local  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/e2e/: login.spec.ts  portfolio.spec.ts
frontend/src/: main.tsx  router.tsx
frontend/src/components/: LoginCard.tsx  ProtectedRoute.tsx  hooks.ts
frontend/src/components/Layout/: SiderMenu.tsx  hooks.tsx  index.tsx
frontend/src/features/: store.ts  types.ts
frontend/src/features/apis/: funds.ts  index.ts  positions.ts  users.ts
frontend/src/features/slices/: app.ts  index.ts
frontend/src/modules/: index.tsx
frontend/src/modules/Home/: index.tsx
frontend/src/modules/Portfolio/: CurrencyToggle.tsx  PortfolioAllocation.tsx  PortfolioTable.tsx  hooks.tsx  index.tsx
frontend/src/modules/Trade/: AmountInput.tsx  BuySellRadio.tsx  FundsDropdown.tsx  PriceChart.tsx  RecordTrade.tsx  SellSection.tsx  TradeDatePicker.tsx  index.tsx
migrations/: 1_init.sql  2_funds.sql  3_positions.sql
